--- a/style.css
+++ b/style.css
@@ -11,15 +11,17 @@
 body {
     font-family: 'RosemaryPrint', sans-serif;
     text-align: center;
-    padding: 50px;
+    padding: 7vh;
 }
 
 h1 {
     color: #333;
     font-weight: normal;
     font-family: 'RosemarySpaced', sans-serif;
+    font-size: 4em;
 }
 
 a {
     text-decoration: none;
+    font-size: 4em;
 }
